resources/reader.scss
$color-dark: #232020;
$color-dark-brighter:#5F5C5C;
$color-normal: #3a3535;
$color-light: #f4f4f4;
$color-light-darker:#c4c4c4;
$color-foreground: #ff7315;
$color-invalid:rgb(255, 53, 53);
@import url('./fonts/opensans.css');

*{
    margin:0;
    padding:0;
    box-sizing:border-box;
    font-family: "Open Sans";
    letter-spacing: .2rem;
    &:focus{
        outline:none;
    }
}
*:not([type='text']){
    user-select: none;
}
*::selection{
    background: $color-foreground;
}
html, body{
    height:100%;
    width:100%;
    background-color: $color-normal;
    overflow: hidden;
    position: relative;
}
body.reverse{
    button.top-button{
        left:0;
    }
    .side-bar{
        box-shadow: -5px 0 6px $color-dark;
        right:0;
    }
    .content{
        left:0;
    }
}
button.top-button{
    height:40px;
    width:40px;
    border:none;
    -webkit-app-region: no-drag;
    position: absolute;
    top:0;
    right:0;
    z-index:12;
    background-color: $color-foreground;
    color:white;
    font-size: 1rem;
    &:hover{
        background-color:$color-dark-brighter;
        cursor:pointer;
    }
}
.side-bar{
    background-color: $color-foreground;
    width:75px;
    height:100%;
    display:flex;
    flex-direction: column;
    position: absolute;
    top:0;
    align-items: center;
    padding:7.5px 0%;
    box-shadow: 5px 0 6px $color-dark;
    z-index:12;
    .logo{
        width:80%;
        padding-bottom:5px;
        border-bottom:1px solid $color-dark;
        -webkit-user-select: none;
        -webkit-app-region: drag;
        margin-bottom:5px;
    }
    .spacer{
        flex-grow:1;
    }
    button{
        display:flex;
        width: 100%;
        height: 10%;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        font-size:.7rem;
        background-color: transparent;
        border:none;
        color:white;
        padding:5px;
        cursor:pointer;
        &.active{
            background-color:$color-normal;
        }
        &:hover{
            
            background-color:$color-dark-brighter;
        }   
        span{
            font-size:2rem;
        }
    }
}
.content{
    background-color: $color-normal;
    height:100%;
    width:calc(100% - 75px);
    position: absolute;
    top:0;
    left:75px;
}
.image-handler{
    @extend %overflowbar;
        --thumb-color:#{$color-foreground};
        --track-color:#{$color-dark};
        --bar-width:1%;
    overflow-x: hidden;
    overflow-y: auto;
    width:82%;
    height:95%;
    position: absolute;
    left:52%;
    top:50%;
    transform: translateX(-50%) translateY(-50%);
    margin:auto;

    .img-container{
        width:98%;
        background-color:black;
        img{
            width:100%;
        }
    }
}
.pointer{
    position:fixed;
    top:50%;
    left:55%;
    color:red;
    transform:translate(-50%);
}
.draggable{
    position:absolute;
    z-index:30;
    display:none;
    flex-direction: column;
    align-self: center;
    border:2px solid transparent;
    .edit &{
        border:2px dashed $color-dark;
        .draggable-content{
            border-top-right-radius:0!important;
            background-color:red;
        }
        .button-group{
            visibility:visible;
        }
        &.hidden{
            display:flex !important;
        }
    }
    &.hidden{
        display:none !important;
    }
    .button-group{
        background-color:$color-dark;
        border-top-left-radius: .5rem;
        border-top-right-radius: .5rem;

        align-self: flex-end;
        display:flex;
        visibility:hidden;
        #visible, #handle{
            letter-spacing: 0;
            height:20px;
            width:20px;
            font-size:.8rem;
            border:none;
            color:$color-foreground;
            display:flex;
            align-items:center;
            justify-content: center;
            background-color:transparent;
        }
        #visible{
            cursor:pointer;
        }
        #handle{
            cursor:grabbing;
        }
    }
}

#chapterNum{
    font-size:.8rem;
    padding:5px 20px;
    height:30px;
    border-radius: 5rem;
    color:white;
    background-color: $color-dark-brighter;
    opacity:.5;
    transition: opacity .5s ease-in;
    transition-delay:2s;
    display:flex;
    align-items:center;
    &:hover{
        opacity:1;
        transition-delay:0s;
    }
    .edit &.draggable-content{
        opacity:1;
        transition-delay:0s;
    }
    .dropdown{
        @extend %dropdown;
        .options{
            flex-direction: column-reverse !important;
        }
    }
}
#controls{
    height:40px;
    width:150px;
    border-radius: 5rem;
    padding:2.5% 5%;
    background-color: $color-dark-brighter;
    opacity:.5;
    transition: opacity .5s ease-in;
    transition-delay:2s;
    display:flex;
    align-items:center;
    justify-content: space-between;
    &:hover{
        opacity:1;
        transition-delay:0s;
    }
    .edit &.draggable-content{
        opacity:1;
        transition-delay:0s;
    }
    button{
        letter-spacing: 0;
        height:30px;
        width:30px;
        color:white;
        background-color: $color-normal;
        border:none;
        border-radius:5rem;
        font-size:1.2rem;
        cursor:pointer;
        &:hover{
            background-color: $color-foreground;
        }
        &:disabled{
            pointer-events: none;
            color:$color-normal;
        }
    }
}
#zoom-controls{
    @extend #controls;
}
.modal-bg{
    display:none;
    position:fixed;
    height:100%;
    width:100%;
    top:0;
    left:0;
    z-index:2000;
    background-color: rgba(black,0.8);
    .modal-content{
        position:absolute;
        left:50%;
        top:50%;
        z-index:2001;
        transform: translateX(-50%) translateY(-50%);
        height:200px;
        width:400px;
        background-color:white;
        .header{
            pointer-events: auto;
            color: white; 
            padding:0 2%;
            height:30px;
            width:100%;
            display:flex;
            justify-content: space-between;
            align-items: center;
            background-color: $color-foreground;
            button{
                font-size:1.5rem;
                color:white;
                border:none;
                background-color: transparent;
                cursor:pointer;
            }
        }
    }
}

.modal-content#options{
    height:400px;
    width:500px;
    color: white; 
    background-color: $color-normal;
}


%dropdown{
    width:130px;
    max-height:95%;
    overflow:hidden;
    position:relative;
    align-self:flex-start;
    transition: max-height .5s ease-in-out;
    &.active{
        max-height:200px;
    }
    .arrow{
        display:block;
        line-height:150%;
        text-align:center;
        position:absolute;
        height:20px;
        width:20px;
        top:0;
        right:0;
        background-color:$color-dark;
        color:white;
        pointer-events:none;
    }
    .selected{
        display:block;
        background-color: rgba($color-light-darker,.8);
        width:100%;
        height:20px;
        padding-left:5%;

    }
    .options{
        @extend %overflowbar;
        overflow-y: scroll;
        --thumb-color:#{$color-foreground};
        --track-color:#{$color-normal};
        --bar-width:20px;
        max-height:200px;
        background-color: $color-dark-brighter;
        width:100%;
        display:flex;
        flex-direction: column;
        .option{
            padding-left:5%;
            display:block;
            width:100%;
            &.active{
                background-color:$color-foreground;
            }
        }
    }
}
%overflowbar{
    overflow-y: scroll;
    overflow-x: hidden;
    &::-webkit-scrollbar {
        width:var(--bar-width);
    }
    &::-webkit-scrollbar-track {
        background: var(--track-color);
    }
    &::-webkit-scrollbar-thumb {
        background: var(--thumb-color);
        width:var(--thumb-width);
    }
}

